force-app/main/default/objects/ACR3__c/ACR3__c.object-meta.xml
<CustomObject>
    <label>ACR3</label>
    <nameField>
        <label>ACR3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACR3s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>