force-app/main/default/objects/ACR3__c/fields/F1july22__c.field-meta.xml
<CustomField>
    <fullName>F1july22__c</fullName>
    <description>test</description>
    <label>F1july22</label>
    <length>6</length>
    <type>Text</type>
</CustomField>