force-app/main/default/objects/ACR3__c/fields/F2july22__c.field-meta.xml
<CustomField>
    <fullName>F2july22__c</fullName>
    <description>test</description>
    <label>F2july22</label>
    <length>7</length>
    <type>Text</type>
</CustomField>