force-app/main/default/objects/ACR3__c/fields/field1__c.field-meta.xml
<CustomField>
    <fullName>field1__c</fullName>
    <description>JUly22</description>
    <label>field1</label>
    <length>9</length>
    <type>Text</type>
</CustomField>