force-app/main/default/objects/ACR3__c/fields/field2__c.field-meta.xml
<CustomField>
    <fullName>field2__c</fullName>
    <description>July22</description>
    <label>field2</label>
    <type>Email</type>
</CustomField>